core-app-deploy/nexus3/conf/02-nexus-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-nexus
  namespace: core-app
  labels:
    app: nexus
spec:
  serviceName: svc-nexus
  selector:
    matchLabels:
      app: nexus
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: docker.io/sonatype/nexus3:3.41.1
          resources:
            requests:
              memory: 3Gi
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          ports:
            - containerPort: 8081
              hostPort: 8081
              name: work-port
          startupProbe:
            httpGet:
              port: work-port
              path: /service/rest/v1/status
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: work-port
              path: /service/rest/v1/status
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 5
        - name: nginx
          image: docker.io/library/nginx:1.21.1
          volumeMounts:
            - name: nginx-data
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: pvc-nexus-data
        - name: nginx-data
          configMap:
            name: conf-nexus-nginx
