core-app-deploy/nexus3/conf/03-nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: svc-nexus
  namespace: core-app
spec:
  ports:
    - name: nexus-web
      protocol: TCP
      port: 80
    - name: nexus-docker
      protocol: TCP
      port: 81
    - name: nexus-maven
      protocol: TCP
      port: 82
    - name: nexus-yum
      protocol: TCP
      port: 83
    - name: nexus-apt
      protocol: TCP
      port: 84
  selector:
    app: nexus
