core-app-deploy/nexus3/conf/04-nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus
  namespace: core-app
  labels:
    app: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # <1>
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - nexus.internal.d7z.net
      secretName: tls-pri-d7z
  rules:
    - host: nexus.internal.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nexus
                port:
                  name: nexus-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus-public
  namespace: core-app
  labels:
    app: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # <1>
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - registry.d7z.net
        - repos.d7z.net
      secretName: tls-pub-d7z
  rules:
    - host: registry.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nexus
                port:
                  name: nexus-docker
    - host: repos.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-nexus
                port:
                  name: nexus-repos
